[package]
name = "consensus"
version = "0.1.0"
authors = ["Alberto Sonnino <asonnino@fb.com>"]
edition = "2018"

[dependencies]
tokio = { version = "1.5.0", features = ["sync"] }
log = "0.4.14"
bincode = "1.3.1"
futures = "0.3"

crypto = { path = "../crypto" }
config = { path = "../config" }
primary = { path = "../primary" }
store = { path = "../store" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []
