[package]
name = "crypto"
version = "0.1.0"
authors = ["Alberto Sonnino <alberto@sonnino.com>"]
edition = "2018"
publish = false

[dependencies]
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
ed25519-dalek = { version = "1.0.1", features = ["batch"] }
serde = { version = "1.0", features = ["derive"] }
rand = "0.7.3"
base64 = "0.13.0"
blsttc = {package = "blsttc", git = "ssh://git@github.com/Entropy-Foundation/blsttc-supra.git", rev = "ae4bce5002e8693f879599f6267a566f53c2c87e"}
serde_json = "1.0"
zeroize = "1.5.7"