[package]
name = "primary"
version = "0.1.0"
authors = ["Libra <oncall+libra@xmail.facebook.com>"]
publish = false
edition = "2018"

[dependencies]
futures = "0.3.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.5.0", features = ["sync", "rt", "macros"] }
tokio-util = { version = "0.6.2", features= ["codec"] }
ed25519-dalek = "1.0.1"
thiserror = "1.0.20"
bincode = "1.3.1"
bytes = "1.0.1"
env_logger = "0.7.1"
log = "0.4.11"
async-recursion = "0.3.2"
async-trait = "0.1.50"
blsttc = {package = "blsttc", git = "ssh://git@github.com/Entropy-Foundation/blsttc-supra.git", rev = "ae4bce5002e8693f879599f6267a566f53c2c87e"}


crypto = { path = "../crypto" }
store = { path = "../store" }
config = { path = "../config" }
network = { path = "../network" }

[dev-dependencies]
rand = "0.7.3"

[features]
benchmark = []